docs-en/docs/rubik-pi-3-user-manual/1.0.0/1.quick-start.md
---
sidebar_position: 1
description: ''
custom_edit_url: https://github.com/rubikpi-ai/documentation/blob/main/docs-en/docs/rubik-pi-3-user-manual/1.0.0/1.quick-start.md
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

# 1. Get Started

## 1.1 Introduction

RUBIK Pi 3 is developed based on the Qualcomm QCS6490 processor which features the Qualcomm® Kryo™ 670 CPU and the Qualcomm® Hexagon™ Processor with fused AI-accelerator architecture. The processor provides exceptional AI performance of 12.5 TOPS and offers the capability for various machine learning and AI application scenarios.

RUBIK Pi 3 is designed with a wide range of interfaces and functions, such as USB, camera, DisplayPort, HDMI, Ethernet, a 3.5mm headphone jack, Wi-Fi, Bluetooth, M.2 connector, fan, RTC, and a 40-pin LS connector. These features cater to diverse development needs while facilitating rapid development and efficient debugging. RUBIK Pi 3 is compatible with various systems, such as Qualcomm Linux, Canonical Ubuntu for Qualcomm Platforms\*, and Android 13, providing developers with the flexibility to meet their specific application needs.

![](media/e8f95ce71a0a1da5b96f435f5149ac12.png)

\*Canonical Ubuntu for Qualcomm Platforms is in the planning phase

## 1.2 Specifications

| Category          | RUBIK Pi 3 Feature                                                           |
|-------------------|------------------------------------------------------------------------------|
| SoC               | QCS6490                                                                      |
| Processor         | <p>1 x Cortex-A78 2.7 GHz</p> <p>3 x Cortex-A78 2.4 GHz</p> 4 x Cortex-A55 1.9 GHz|
| GPU               | Adreno 643 GPU @ 812 MHz                                                     |
| VPU               | Adreno 633 VPU                                                               |
| NPU               | 12.5 TOPS                                                                    |
| ISP               | Spectra ISP capable of terminal-side machine learning and machine processing |
| RAM               | 8 GB LPDDR4x                                                                 |
| ROM               | 128 GB UFS 2.2                                                               |
| Wi-Fi & Bluetooth | Wi-Fi 5 and Bluetooth 5.2                                                    |
| Camera            | 2 x 4-lane MIPI CSI D-PHY connector                                          |
| USB               | <p>1 x USB Type-C (USB3.1 Gen1)</p> <p>2 x USB3.0</p> 1 x USB2.0             |
| GPIOs             | 28 GPIO pins                                                                 |
| Ethernet          | 1000M                                                                        |
| M.2 connector     | M.2 Key M 2280 (PCIe3.0 2-lane)                                              |
| Audio             | 3.5mm headphone jack                                                         |

## 1.3 Preparations

- Computer running Windows 10 and later, or Ubuntu 18 and later
- RUBIK Pi 3
- USB Type-A to Type-C cable
- USB Type-A to Micro USB cable
- Power supply (12V 3A Type-C)

### 1.3.1 Install drivers

#### 1.3.1.1 Install drivers in a Windows environment

##### 1.3.1.1.1 Install QUD

1. Click https://github.com/rubikpi-ai/tools/blob/main/qud/qud.win.1.1_installer_10061.1.zip to download the installation package.

![](media/9980cdbe66c5f9500f565c706ec1f28d.jpeg)

2. Decompress *qud.win.1.1_installer_10061.1.zip*, run *setup.exe* as shown in the following figure, and click **Next**.

![](media/0d4ce0e74a56696699972576150415c7.png)

3. Click **Next**.

![](media/4c72e34ff00f0a99c89ef8fc549ff6f9.png)

4. Select the **I accept the terms in the license agreement** option and click **Next**.

![](media/85e05cfaa457c518acd5f01cf1b63a16.png)

5. Click **Install**.

![](media/9f254eb36c32060d33382df3d9130066.png)

6.  Click **Finish** to complete the driver installation.

![](media/5d83f32a5f86ce004f7febce320b8730.png)

##### 1.3.1.1.2 Install Tflash

1.  Click https://github.com/rubikpi-ai/tools/blob/main/tflash/windows/TflashSetup_v1.2.0.4.exe to download the installation package.

![](media/6df9db35c2410e6f1f7f8e8cd5c3700d.jpeg)

2.  Run *TflashSetup_v1.2.0.4.exe*. Select the desired language and click **OK**.

![](media/e941d577b7f1609111eafc7bb5e0d859.png)

3.  Select the location where you want to install Tflash and click **Next**.

![](media/08ca837be476019f7bb8b719c03b77a5.png)

4.  Click **Next**.

![](media/98364e40fed410810ece018b9d3d0161.png)

5.  Select the **Create a desktop shortcut** option and click **Next**.

![](media/01d03f22f2a450d157e218f87e3862c6.png)

6.  Click **Install**.

![](media/3bb75c63e0629604ef5aa94c6658d08e.png)

7.  Select the **Launch Tflash** option and click **Finish**.

![](media/3ee65a3dcdaf3312779fb77f25739f22.png)

8.  If the following error message appears, click **Yes**. Follow the instructions to download the required installation package.

![](media/3f227809a22dc95d6fad36687fabb8fd.jpeg)

9.  Double-click the package you downloaded and click **Install**.

![](media/94f3ceef27175506774e52b230b8e948.jpeg)

10.  Click **Close** to complete the installation.

![](media/d9d0761533e5e9a6e7dc63a466bd997b.jpeg)

11.  After the installation is completed, the following Tflash icon will appear on your desktop and in the Start menu.

![](media/ad7100278886f6d2026226a3e7c5c7cb.png)

#### 1.3.1.2 Install drivers in an Ubuntu environment

##### 1.3.1.2.1 Install Tflash

1.  Click https://github.com/rubikpi-ai/tools/blob/main/tflash/ubuntu/Thundercomm-tflash-v1.0.0.deb to download the installation package.

![](media/86236a4e817d518a4dca89da75ddf4b0.jpeg)

2.  Run the following command to install Tflash.

 ```Shell showLineNumbers  
    sudo dpkg -i Thundercomm-tflash-v1.0.0.deb
 ```

3.  After the installation is completed, run the `tflash` command in the terminal. If the following message appears, it indicates that Tflash has been successfully installed:

![](media/b1de7c42352ef8c907d2b10441ca4557.png)

### 1.3.2 Download images

RUBIK Pi 3 comes with a pre-installed Linux image for a quick out-of-the-box experience. If you need the latest version of the Linux image or other operating system images, please visit the official website https://www.thundercomm.com/product/rubik-pi/ to download.

Visit GitHub to download the Linux source code at https://github.com/rubikpi-ai as needed.

- Qualcomm Linux is a simplified desktop system based on Weston. It is suitable for developers who have Linux development experience and seek an in-depth development experience.

![](media/2a60bd8ff5fba7a6dee37163820e56bb.png)

- Canonical Ubuntu for Qualcomm Platforms (under development) is a comprehensive system built on Ubuntu 24. The system provides more desktop applications, a better user experience, and a wealth of development resources. It is suitable for developers seeking an efficient development environment.
- Android 13 is an enhanced system based on Google AOSP, offering an improved experience for developers working on Android applications.

![](media/c7cd56042867c7822cf8e64fc56a9fd1.png)

### 1.3.3 Flash images

![](media/image-65.png)

Before flashing images, enter the flash mode (9008 mode) using one of the following methods:

<Tabs>
<TabItem value="methed1" label="Method 1" default>
1. Connect the power supply into port 10.
![](media/aa2d65e26d6fe316850d4975a0495df4.jpeg)

2. Press and hold the **[EDL]** button (No. 12).

![](media/815edc4c2f183c8dda83aef1492b4a22.jpeg)

3. Insert the Type-C cable into port 5 and wait for three seconds to enter 9008 mode.

![](media/94de08d3ffe07dcf414bd3d35bb2fd03.jpeg)
</TabItem>
<TabItem value="methed2" label="Method 2">

1.  Insert the power supply into port 10.

![](media/ff510d2d1001e334ab88e344fc21cc05.jpeg)

2.  Insert the Type-C cable into port 5.

![](media/b321b10b3d2a50fce1511cb4f10e4f25.jpeg)

3.  After RUBIK Pi 3 boots up, run the following command to enter 9008 mode.

``` Shell  
    adb shell reboot edl
```
</TabItem>
<TabItem value="methed3" label="Method 3">

1.  Connect the power supply into port 10.

![](media/ff510d2d1001e334ab88e344fc21cc05.jpeg)

2.  Press and hold the **[EDL]** button (No. 12).

![](media/e1830b5f208ba4e12b1e7880e433b58e.jpeg)

3.  Press and hold the **[PWR ON]** button (No.11) and wait for three seconds.

![](media/ad755d1509cdc9dde9f00fc89292ab08.jpeg)

4.  Insert the Type-C cable into port 5 to enter 9008 mode.

![](media/89b8099a3744037d65396fb3092c897a.jpeg)
</TabItem>
</Tabs>

#### 1.3.3.1 Flash images on a Windows system

1.  Open the Tflash software. Make sure the device is in 9008 mode, as shown in the following figure:

![](media/48deaf2f6e9eaceca3bf77262e380b0c.png)

2.  Select the **Storage Type** of the device to be flashed. For RUBIK Pi 3, select **UFS** for **Storage Type**.

![](media/0573c2caf9c6f05c7499c7c4121da951.png)

3.  Select **Reset After Download** or **Erase All Before Download** as needed. Exercise caution when selecting **Erase All Before Download**.

![](media/73224912fb8f55f862bb0d2801b80258.png)

-  Reset After Download: When this option is selected, the device will reboot automatically after image flashing is completed.
-  Erase All Before Download: When this option is selected, the data in each RUBIK Pi UFS partition will be erased before flashing.

 :::warning

-   The **Erase All Before Download** option takes effect only when the UFS partitions are the same before and after flashing.
-   Selecting **Reset After Download** or **Erase All Before Download** is not a mandatory action. You are not required to select one of them.
:::
4.  Flash the FlatBuild image.

     a.  Click **Browse**.

![](media/e716a374a83b5df391bf6e871dbbfffa.png)

     b.  Go to the FlatBuild directory, select *Programmer File*, and select *prog_firehose_ddr.elf*.

![](media/0dd0a069ab816b227d6d0715bd3e9d27.jpeg)

     c.  Select all .xml files whose names start with "rawprogram".

![](media/1ed430e152a7c5fe3039d97d4c644288.jpeg)

     d.  Select all .xml files whose names start with "patch".

![](media/71530142d7bf75e942eec61207e57ac9.jpeg)

After the above settings, the related information will be displayed in the Tflash interface.

![](media/f143a36d48ed73b74bf7ea2a3035428e.png)

     e.  Click **Download** to start flashing.

![](media/740da8ef40ce72f1e8f0a9d181579368.png)

:::tip

The flashing time varies from computer to computer. The green progress bar shows the flashing progress.
:::

After images are successfully flashed, the following logs will be displayed:

![](media/ea9063d529bf578118744129d6d0c736.png)

- If you have selected **Reset After Download**, the board will reboot automatically after flashing.
- If you have not selected **Reset After Download**, disconnect the power cable and USB cable to power off RUBIK Pi 3, then reconnect the power cable and press the **[PWR ON]** button to start RUBIK Pi 3.

![](media/81df86019339caed49234bc61358d602.png)

#### 1.3.3.2 Flash images on an Ubuntu system

1.  Go to the FlatBuild package directory.
2.  Run `tflash -r`.

    :::tip

    Run the `tflash -h` command to view more parameters. `-r` in the above command indicates restarting your RUBIK Pi 3 after flashing is completed.
    :::

3.  When "Stop the ModemManager on your host PC and press Enter on your keyboard to continue..." appears on the screen, press **Enter** to flash images.

![](media/c9a1e0124c95ea1fab2dc5dd36396bf2.png)

If the following information is displayed after the tflash operation, it indicates that flashing was successful.

![](media/251f4db2ccb88cf93d8900ab62ef12b1.png)

:::tip

When running tflash on your PC, enter the sudo password as prompted. The password is the login password for the PC.
:::

4.  After successful image flashing by using the `-r` parameter, RUBIK Pi 3 automatically reboots.

## 1.4 Power-on

Connect the power supply and press the **[PWR ON]** button to power on RUBIK Pi 3.

![](media/8f7ade2104120d0e8fb72debe81cd80e.jpeg)

## 1.5 Power-off

Run the `poweroff` command to power off RUBIK Pi 3.

![](media/525b7de0bb480735acef2f45cffd1837.jpeg)

## 1.6 Reboot

-   Run the `reboot` command.

![](media/5e68702e30a028a9d446ad9d8f3bd6c7.jpeg)

-   Press and hold the **[PWR ON]** button for 12 seconds to reboot RUBIK Pi 3.

![](media/33405e4c0571e1ce0be1c662c5927090.jpeg)

## 1.7 Serial port login

### 1.7.1 Windows

1.  Connect port 2 in the following figure to a computer via a serial cable.

![](media/image-65.png)

2.  Open the computer settings page, check the corresponding COM port in Device Manager, and record the port.

![](media/023caf362e64623f12fae5563b01a16b.jpeg)

3.  Download MobaXterm at https://mobaxterm.mobatek.net/ and decompress to use it.

![](media/9b7c4aa16776f5d2c7bfcfe554baf327.jpeg)

4.  Open MobaXterm, select **Session** \> **Serial**, and set the baud rate of the serial port to 115200.

![](media/283efc0fcf4ba0a3cdd401008b518f36.jpeg)

![](media/89b3c91a16419d6fc5e3fa5b2fa07d50.png)

5.  Click **OK**. Press **Enter** and type your login name and the default login password to log in:
-   Qualcomm Linux

    Login account: root  
    Login password: rubikpi

:::tip

    You can run the `passwd` command to change the default password. For example:
    

```Shell showLineNumbers  
    passwd root
```

![](media/7c019c2659c5517d6224f5cf60f5b898.jpeg)
:::

### 1.7.2 Ubuntu

1.  Connect port 2 in the following figure to a computer via a serial cable.

![](media/image-65.png)

2.  Run the following commands to install minicom:

```Shell showLineNumbers  
    sudo apt update  
    sudo apt install minicom
```

3.  Run the following command to check the USB port:

```Shell showLineNumbers  
    ls /dev/ttyACM*
```

![](media/29cd3b0c92715cba8896bc619080782f.jpeg)

4.  Run the following command to open minicom. Press **Enter** and type your login name and the default login password to log in:

```Shell showLineNumbers  
    sudo minicom -D /dev/ttyACM0 -b 115200
```

-  Qualcomm Linux

    Login account: root  
    Login password: rubikpi

:::tip

    You can run the `passwd` command to change the default password. For example:

```Shell showLineNumbers  
    passwd root
```

![](media/7c019c2659c5517d6224f5cf60f5b898.jpeg)
:::

## 1.8 ADB login

### 1.8.1 Windows

#### 1.8.1.1 Preparations

1.Download the ADB and Fastboot installation package at https://developer.android.google.cn/tools/releases/platform-tools and decompress the package.

![](media/cc0b2dd24fe2490dab6a136dbaa4d09f.png)

2.Right-click **This PC** and choose **Properties**. Click **Advanced** and click **Environment Variables**. Alternatively, right-click **This PC** and choose **Properties**. In the search bar, type **Advanced system settings** and click **Environment Variables**.

![](media/43c499bff0dd67caf5ea33f260a83fdd.jpeg)

3.Under **System variables**, select **Path** and click **Edit**.

![](media/bf5b650052e0b99ff55a177aa8ccbff8.jpeg)

4.Click **New** and type the path of decompressed platform-tools in Step 1. Click **OK** to save the environment variable.

![](media/82c9da998f5712ea909b7faeeb56af22.jpeg)

#### 1.8.1.2 ADB login

Press **Win**+**R** and type "CMD" to open the Windows terminal. Run the following commands to log in to your RUBIK Pi 3:

```Shell showLineNumbers  
adb devices # Check if devices are connected  
adb root    # Log in as root user  
adb shell   # Open the adb terminal
```

![](media/0cec746b75bfe759245b41a5e5021838.jpeg)

### 1.8.2 Ubuntu

#### 1.8.2.1 Preparations

1.Run the following command to install the ADB and Fastboot tools:

    ```Shell showLineNumbers  
    sudo apt install git android-tools-adb android-tools-fastboot wget
    ```

2.Update the udev rules file.

     a.Run the following command to open and modify the *51-qcom-usb.rules* file.

```Shell showLineNumbers  
    sudo vi /etc/udev/rules.d/51-qcom-usb.rules
```

     b.Add the following content to the file. If the following content already exists, skip this step.

```Shell showLineNumbers  
    SUBSYSTEMS=="usb", ATTRS{idVendor}=="05c6", ATTRS{idProduct}=="9008", MODE="0666", GROUP="plugdev"
```

     c.Run the following command to restart `udev`.

```Shell showLineNumbers  
    sudo systemctl restart udev
```

:::note

    If RUBIK Pi 3 is already connected to the PC via USB, plug and unplug the USB cable to reconnect RUBIK Pi 3 so that the updated rules take effect.
:::

#### 1.8.2.2 ADB login

Run the following commands in the terminal to log in to your RUBIK Pi 3:

```Shell showLineNumbers  
adb devices # Check if devices are connected  
adb root    # Log in as root user  
adb shell   # Open the adb terminal
```

![](media/66710b6f5fd0b75c56b300157d3293bb.png)

## 1.9 SSH login

### 1.9.1 Windows

1. Obtain the IP address.

     a.  Log in to the backend of the router or use other IP scanning software to obtain the IP address of RUBIK Pi 3.


    :::note
    
    The IP address may change depending on the network environment, and the device name of RUBIK Pi is "rubikpi".
    
    :::

     b. Press **Win**+**R**, type "cmd" in the pop-up window, and click **OK**.

    ![](media/326599ffd704b52fe5c067d32c303627.jpeg)

     c. Run the `ping <IP>` command in the terminal. For example, the IP address of RUBIK Pi is 10.9.5.59, run the following command and view the execution result.

    ```Shell  
    ping 10.9.5.59
    ```

  ![alt text](image-1.png)

2. SSH login

     a. Open MobaXterm.

    ![7a8190d1-0383-411f-9d93-0ef96bbde2d3.jpeg](media/283efc0fcf4ba0a3cdd401008b518f36.jpeg)

     b.  Click **Session** and select **SSH** in the pop-up window.

    ![2c3349eb-0b51-41cb-88a8-9d82fd6d4ed8.jpeg](media/8efb038776e3aaf4406457b8ff8db7cd.jpeg)

     c.  Type the IP address of the RUBIK Pi 3 you want to log in to and click **OK**.

   ![alt text](image.png)

     d.  Type the username, press **Enter**, type the password, and press **Enter** to log in to RUBIK Pi 3.

    ![1982f612-258a-4389-b586-2221bad9bad4.jpeg](media/2fa614cd6e80930df7c3320c54c5057b.jpeg)

     e.  The following information indicates that the login is successful.

    ![25587927-f85b-47a4-a93c-7ddc06e640cc.jpeg](media/eeb5fdabfd44f427f0f67146ee9445f0.jpeg)

### 1.9.2 Ubuntu

1. Confirm the network connection.

     a.  Log in to the backend of the router or use other IP scanning software to obtain the IP address of RUBIK Pi 3.

     :::note

     The IP address may change depending on the network environment, and the device name of RUBIK Pi is "rubikpi".

     :::

     b.  Run the `ping <IP>` command in the Ubuntu terminal. For example, the IP address of RUBIK Pi is 10.9.5.59, run the following command and view the execution result.

    ```Shell  
    ping 10.9.5.59
    ```

    ![7d0e73ce-06de-4b28-97d5-7f6fd3ab5f1c.jpeg](media/3f119afac7ebd83b754d3454e2589ef2.jpeg)

2. SSH login

     a. Type the `ssh <user>@<IP>` command in the Ubuntu terminal and press **Enter**, as shown in the following figure. `root` indicates the role you want to log in as. `10.9.5.59` indicates the IP address of RUBIK Pi 3.

    ```Shell  
    ssh root@10.9.5.59
    ```

     b. Type the password and press **Enter**. The login succeeds.

    ![daea85e9-bad1-4d27-a364-28e683f7a3b8.jpeg](media/28186bc6e16c13afe1309b69673843da.jpeg)

## 1.10 File transfer

### 1.10.1 ADB

-   In the PC terminal, run the following command to upload the *test.txt* file to the */opt* directory:

```Shell showLineNumbers  
    adb push test.txt /opt
```

-   In the PC terminal, run the following command to download the *test.txt* file to your current directory:

```Shell showLineNumbers  
    adb pull /opt/test.txt ./
```

### 1.10.2 SCP

To use Secure Copy Protocol (SCP) transfer, ensure the RUBIK Pi 3 is connected to the network. For example, if the IP address of RUBIK Pi 3 is 10.9.5.59, run the following commands:

:::tip

Run the `ifconfig` command on RUBIK Pi 3 to obtain its IP address.

![](media/b288ef7c5619e6dd04937666438d2dda.png)
:::

-   In the PC terminal, run the following command to upload the *test.txt* file to the */opt* directory:

```Shell showLineNumbers  
    scp test.txt root@10.9.5.59:/opt
```

-   In the PC terminal, run the following command to download the *test.txt* file to your current directory:

```Shell showLineNumbers  
    scp root@10.9.5.59:/opt/test.txt ./
```

## 1.11 Set up the Ubuntu development environment

### 1.11.1 Install software

1. Run the following commands in the Ubuntu terminal to install the following software.

 ```Shell showLineNumbers  
    sudo apt update
    sudo apt install repo gawk wget git diffstat unzip texinfo gcc build-essential chrpath socat cpio python3 python3-pip python3-pexpect xz-utils debianutils iputils-ping python3-git python3-jinja2 libegl1-mesa libsdl1.2-dev pylint xterm python3-subunit mesa-common-dev zstd liblz4-tool locales tar python-is-python3 file libxml-opml-simplegen-perl vim whiptail bc
    sudo apt-get install lib32stdc++6 libncurses5 checkinstall libreadline-dev libncursesw5-dev libssl-dev libsqlite3-dev tk-dev libgdbm-dev libc6-dev libbz2-dev libffi-dev curl git-lfs
```

2. Run the following commands in the Ubuntu terminal to install Python 3.10.2. In the Linux kernel packaging process, the `python3.10` command is used. If you have installed Python 3.10.2 or later, skip this step.

```Shell showLineNumbers  
    python --version
    # Download it in a directory of your choice
    wget https://www.python.org/ftp/python/3.10.2/Python-3.10.2.tgz
    tar -xvf Python-3.10.2.tgz
    cd Python-3.10.2
    ./configure --enable-optimizations
    make
    sudo make install
```

3. Run the following command in the Ubuntu terminal to install pefile.

 ```Shell showLineNumbers  
    sudo pip3.10 install pefile
```

### 1.11.2 Install cross-compilation tools

1. Run the following commands in the Ubuntu terminal to download the cross-compilation toolchain for RUBIK Pi 3.

```Shell showLineNumbers  
    git clone https://github.com/rubikpi-ai/toolchains.git
    git lfs pull
```

2. Run the following commands in the Ubuntu terminal to install the cross-compilation toolchain.

```Shell showLineNumbers  
    cd toolchains
    ./qcom-wayland-x86_64-meta-toolchain-armv8-2a-qcm6490-toolchain-1.0.sh
```

3. Follow the prompts to install the cross-compilation environment, type the absolute path to the installation directory, and type "Y".

    ![](media/18b5b6b8bb316521d3d75425305eabd3.png)

4. After the installation is completed, go to the installation directory and run the following command to set up the cross-compilation environment

 ```Shell showLineNumbers  
    source environment-setup-armv8-2a-qcom-linux
```

5. Run the following command in the Ubuntu terminal to check the version of the gcc toolchain. If the output is as follows, it indicates that the cross-compilation environment is set up successfully.

 ```Shell showLineNumbers  
    aarch64-qcom-linux-gcc -v
```

    ![](media/e9ba027bf2955215d834b2d50c057134.png)

### 1.11.3 Use the cross-compilation tools

After setting up the cross-compilation environment by using the `source environment-setup-armv8-2a-qcom-linux` command as described in the previous section, use the following method to cross-compile the executable program of RUBIK Pi 3.

#### 1.11.3.1 Use the Makefile build

The header file path *sysroot* must be set for cross-compilation. Use the `--sysroot=dir` parameter to specify the path.

```Shell showLineNumbers  
aarch64-qcom-linux-gcc --sysroot=/home/zhy/rubikpi/sdk/sysroots/armv8-2a-qcom-linux
```

:::warning

In the above command, the cross-compilation toolchain is placed at the */home/zhy/rubikpi/sdk* directory of the PC. Change the directory to your actual directory.
:::

#### 1.11.3.2 Build the project using CMake

The following is an example using *aarch64.cmake*:

```CMake showLineNumbers
set(CMAKE_SYSTEM_NAME Linux)
set(CMAKE_SYSTEM_PROCESSOR arm64) #Set the target processor architecture

#Set sysroot
set(TOOLCHAIN_DIR /home/zhy/rubikpi/sdk/sysroots/armv8-2a-qcom-linux)
set(CMAKE_SYSROOT ${TOOLCHAIN_DIR}/sysroots/armv8-2a-qcom-linux)

#Set the cross-compiler
SET(CMAKE_C_COMPILER ${TOOLCHAIN_DIR}/sysroots/x86_64-qcomsdk-linux/usr/bin/aarch64-qcom-linux/aarch64-qcom-linux-gcc)
SET(CMAKE_CXX_COMPILER ${TOOLCHAIN_DIR}/sysroots/x86_64-qcomsdk-linux/usr/bin/aarch64-qcom-linux/aarch64-qcom-linux-g++)
set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
```

When using CMake to build a project, create a *CMakeLists.txt* according to the actual situation of the project and run the following command to generate the Makefile.

```Shell showLineNumbers  
cmake -DCMAKE_TOOLCHAIN_FILE=aarch64.cmake
```

## 1.12 Linux kernel

It is advisable to conduct Linux kernel development in an environment running Ubuntu 18 or a later version.

### 1.12.1 Download code

Run the following command to download code:

```Shell showLineNumbers  
git clone https://github.com/rubikpi-ai/linux.git
```

### 1.12.2 Compile code

1. Set up the cross-compilation environment. For details, refer to "1.11.2. Install cross-compilation tools".

```Shell showLineNumbers  
    source <your toolchains directory>/environment-setup-armv8-2a-qcom-linux
```

    :::warning

    The cross-compilation environment is only effective in the current terminal.

    If the following error occurs, input the `unset LD_LIBRARY_PATH` command as prompted and run the above command again.

    ![](media/b47706266b2e5cc350ff00a19364af06.jpeg)
    :::

2.  Go to the kernel directory and compile the kernel.

 ```Shell showLineNumbers  
    ./rubikpi_build.sh -a
```

    :::note

-   The first compilation takes a longer time based on different computer configurations. In most cases, it takes less than 20 minutes. Subsequent compilations are only performed on modified code.
-   The kernel directory can be cleaned up using the `make clean` command, after which all compilation artifacts and some configuration content will be deleted.
:::

3.  Go to the kernel directory. Package the kernel and device tree image.

```Shell showLineNumbers  
    ./rubikpi_build.sh -dp -ip # Package image
```

![](media/dc83a7576be8a35f99fc969e6b65cbfa.png)

:::warning

If the following error occurs when you package the image:

![](media/0e3f9130068224d24996fe415ff08733.jpeg)

Run the following command to modify the *.mtoolsrc* file, add `mtools_skip_check=1`, and try packaging the image again.

```Shell showLineNumbers  
vim ~/.mtoolsrc
```
:::

4.  Go to the kernel directory and flash the kernel and device tree image.

```Shell showLineNumbers  
    ./rubikpi_flash.sh -d -i -r # Flash
```

    :::warning

    Before flashing, ensure that RUBIK Pi 3 has entered fastboot mode. Use one of the following methods to enter fastboot mode:

1.  In the RUBIK Pi 3 terminal, input `reboot bootloader`. When RUBIK Pi 3 enters fastboot mode, the blue indicator lights up.
2.  Press and hold the **[PWR ON]** button until the blue indicator lights up.
:::
    For details about how to use the `./rubikpi_build.sh` and `./rubikpi_flash.sh` scripts, use the `–h` parameter.
    

5. Compile the ko driver module separately.

     a. Create a Makefile as follows. Change KDIR to the actual kernel source code directory.

    ```Makefile showLineNumbers  
    obj-m += hello.o  
    KDIR:=/home/rubikpi/kernel-6.6  
    PWD?=$(shell pwd)  
    all:   
     make -C $(KDIR) M=$(PWD) modules  
     echo $(PWD)  
    clean:   
     rm -f *.ko *.o *.mod *.mod.o *.mod.c *.symvers *.order
    ```

     b. Create a *hello.c* file as follows:

    ```C showLineNumbers  
    #include <linux/module.h>  
    #include <linux/init.h>  
      
    static int hello_init(void)  
    {  
     printk("hello RUBIK Pi!\n");  
     return 0;  
    }  
      
    static void hello_exit(void)  
    {  
     printk("bye RUBIK Pi!\n");  
    }  
      
    module_init(hello_init);  
    module_exit(hello_exit);  
      
    MODULE_LICENSE("GPL");  
    MODULE_VERSION("V1.0");  
    MODULE_AUTHOR("RUBIK Pi");
    ```

     c. Run the following commands to compile the ko driver module:

    ```Bash showLineNumbers  
    export ARCH=arm64  
    export CROSS_COMPILE=aarch64-qcom-linux-  
    make
    ```

     d.  Transfer hello.ko to your RUBIK Pi 3 using the ADB or SCP method.

     e.  Run the following commands on your RUBIK Pi 3 to verify that the compilation artifact is valid.

    ```Shell showLineNumbers  
    insmod hello.ko
    rmmod hello.ko
    dmesg | grep "RUBIK Pi"
    ```

    ![](media/215190f9c06afcbbbe7ae3cd7f0c7190.jpeg)

### 1.12.3 Configure the kernel

Run the following commands to configure the Linux kernel using menuconfig:

```Bash showLineNumbers  
cd kernel-6.6/  
make ARCH=arm64 menuconfig
```

After the configuration is completed, run the following commands to save the configuration.

```Shell showLineNumbers  
make ARCH=arm64 savedefconfig  
cp defconfig ./arch/arm64/configs/rubik_pi3_defconfig
```

### 1.12.4 Directory analysis

After the operations in 1.12.1. Download code and running the `git clone` command, the RUBIK Pi 3 Linux repository is as shown in the following figure:

![](media/ad286752046215918514e82667aa8587.png)

The major folders and files are described as follows:

| Name             | Description                                                             |
|------------------|-------------------------------------------------------------------------|
| arch             | Architecture-related directory                                          |
| block            | Block device-related directory                                          |
| certs            | Certification and signature-related directory                           |
| crypto           | Encryption-related directory                                            |
| documentation    | Documentation-related directory                                         |
| drivers          | Driver-related directory                                                |
| firmeare         | Firmware-related directory                                              |
| fs               | File system-related directory                                           |
| include          | Header file-related directory                                           |
| init             | Kernel initialization-related directory                                 |
| ipc              | Inter-process communication-related directory                           |
| kernel           | Directory of the kernel core code                                       |
| lib              | Directory of kernel core library code                                   |
| mm               | Directory of memory management-related code                             |
| net              | Directory of network protocol-related code                              |
| samples          | Directory of kernel compilation examples                                |
| scripts          | Directory of kernel compilation and configuration scripts               |
| security         | Security architecture-related directory                                 |
| sound            | Audio system-related directory                                          |
| tools            | Directory of kernel interaction tools                                   |
| usr              | initramfs-related directory, used to generate the initramfs             |
| virt             | Directory that provides Kernel-based Virtual Machine (KVM) technologies |
| rust             | Rust-related directory                                                  |
| rubikpi          | RUBIK Pi 3 related directory for storing compilation tools              |
| techpack         | Qualcomm platform-related driver                                        |
| .config          | Configuration file for final kernel compilation                         |
| Makefile         | Main file used to compile the kernel                                    |
| Kbuild           | Script for configuring kernel settings                                  |
| Kconfig          | Configuration file for the graphical configuration interface            |
| MAINTAINERS      | List of maintainers                                                     |
| CREDITS          | Linux contributors                                                      |
| COPYING          | Copyright statement                                                     |
| rubikpi_build.sh | Compilation and packaging scripts provided by RUBIK Pi 3                |
| rubikpi_flash.sh | Flash scripts provided by RUBIK Pi 3                                    |

#### 1.12.4.1 Device tree

The top-level device tree of RUBIK Pi 3 is rubikpi3-c6490.dts which is located at the *arch/arm64/boot/dts/qcom* directory. It is recommended that all modifications to the device tree be made on this file.

In addition, during the development process, the *sc7280.dtsi* in the same level of directory may be frequently viewed. *sc7280.dtsi* has nodes commonly used during the development process, including GPIO, SPI, I2C, UART, CPU, and GPU.